# uselesskey-swarm

./: .gitattributes  .gitignore  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  clippy.toml  codecov.yml  deny.toml  lefthook.yml  release-plz.toml
crates/materialize-buildrs-example/: Cargo.toml  uselesskey-fixtures.toml
crates/materialize-buildrs-example/src/: lib.rs
crates/materialize-shape-buildrs-example/: Cargo.toml  build.rs  uselesskey-fixtures.toml
crates/materialize-shape-buildrs-example/src/: lib.rs
crates/uselesskey-aws-lc-rs/: Cargo.toml  README.md  build.rs
crates/uselesskey-aws-lc-rs/src/: lib.rs
crates/uselesskey-aws-lc-rs/tests/: aws_lc_rs_comprehensive.rs  aws_lc_rs_multi_scheme.rs  integration_aws.rs  prop_tests.rs  snapshots_aws_lc_rs.rs  testutil.rs
crates/uselesskey-axum/: Cargo.toml  README.md
crates/uselesskey-axum/src/: lib.rs
crates/uselesskey-axum/tests/: accessors.rs  auth_fallbacks.rs  integration.rs
crates/uselesskey-bdd/: Cargo.toml
crates/uselesskey-bdd-steps/: Cargo.toml  build.rs
crates/uselesskey-bench/: Cargo.toml
crates/uselesskey-cli/: Cargo.toml  README.md
crates/uselesskey-core-base62/: Cargo.toml
crates/uselesskey-core-cache/: Cargo.toml  README.md
crates/uselesskey-core-factory/: Cargo.toml  README.md
crates/uselesskey-core-hash/: Cargo.toml  README.md
crates/uselesskey-core-hmac-spec/: Cargo.toml
crates/uselesskey-core-id/: Cargo.toml  README.md
crates/uselesskey-core-jwk/: Cargo.toml
crates/uselesskey-core-jwk-builder/: Cargo.toml
crates/uselesskey-core-jwk-shape/: Cargo.toml  README.md
crates/uselesskey-core-jwks-order/: Cargo.toml
crates/uselesskey-core-keypair/: Cargo.toml  README.md
crates/uselesskey-core-keypair-material/: Cargo.toml  README.md
crates/uselesskey-core-kid/: Cargo.toml
crates/uselesskey-core-negative/: Cargo.toml  README.md
crates/uselesskey-core-negative-der/: Cargo.toml  README.md
crates/uselesskey-core-negative-pem/: Cargo.toml  README.md
crates/uselesskey-core-rustls-pki/: Cargo.toml  README.md
crates/uselesskey-core-seed/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: adapter_jsonwebtoken_roundtrip.rs  adapter_ring_roundtrip.rs  adapter_rustcrypto_roundtrip.rs  adapter_rustls_roundtrip.rs  core_factory_cache.rs  core_hash.rs  core_keypair_material.rs  core_negative_pem.rs  core_token_shape.rs  core_x509_negative.rs  der_ops.rs  ecdsa_pkcs8_pem_parse.rs  factory_concurrent_access.rs  fuzz_derivation_stability.rs  fuzz_ecdsa_keygen.rs  fuzz_ed25519_keygen.rs  fuzz_factory_concurrent.rs  fuzz_factory_stress.rs  fuzz_hmac_keygen.rs  fuzz_jwk_serialization.rs  fuzz_kid_generation.rs  fuzz_label_edge_cases.rs  fuzz_negative_der.rs  fuzz_negative_fixture_edge.rs  fuzz_negative_fixtures.rs  fuzz_negative_pem.rs  fuzz_order_independent_identity.rs  fuzz_pgp_keygen.rs  fuzz_pgp_negative.rs  fuzz_rsa_keygen.rs  fuzz_seed_edge_cases.rs  fuzz_token_generation.rs  fuzz_token_shape.rs  fuzz_x509_cert.rs  fuzz_x509_spec.rs  jwk_builder.rs  jwk_order.rs  jwk_serde.rs  jwk_shape.rs  jwks_builder.rs  (+11 more)
tests/: Cargo.toml  api_surface.rs  builder_patterns.rs  compile_tests.rs  concurrency.rs  cross_adapter.rs  cross_crate_determinism.rs  crypto_backend_integration.rs  determinism.rs  determinism_regression.rs  e2e_workflows.rs  error_boundaries.rs  governance.rs  jwt_integration.rs  key_rotation.rs  kid_stability.rs  msrv_check.rs  no_blob_policy.rs  pem_der_format.rs  security_invariants.rs  testutil.rs  tls_integration.rs
tests/compile_fail/: dangling_pem_ref.rs  dangling_pem_ref.stderr  missing_trait_import.rs  missing_trait_import.stderr  wrong_spec_type.rs  wrong_spec_type.stderr
tests/snapshots/: api_surface__api_shape_snapshots__core_types_shape.snap  api_surface__api_shape_snapshots__ecdsa_api_shape.snap  api_surface__api_shape_snapshots__ed25519_api_shape.snap  api_surface__api_shape_snapshots__hmac_api_shape.snap  api_surface__api_shape_snapshots__negative_fixtures_shape.snap  api_surface__api_shape_snapshots__rsa_api_shape.snap  api_surface__api_shape_snapshots__token_api_shape.snap  api_surface__api_shape_snapshots__x509_api_shape.snap  determinism_regression__crypto_edge_key_fingerprints.snap  determinism_regression__ecdsa_p256_metadata.snap  determinism_regression__ecdsa_p384_metadata.snap  determinism_regression__ed25519_metadata.snap  determinism_regression__hmac_hs256_metadata.snap  determinism_regression__hmac_hs384_metadata.snap  determinism_regression__hmac_hs512_metadata.snap  determinism_regression__jwk_ecdsa_shape.snap  determinism_regression__jwk_ed25519_shape.snap  determinism_regression__jwk_rsa_shape.snap  determinism_regression__jwks_multi_key.snap  determinism_regression__kid_all_types.snap  determinism_regression__kid_ecdsa.snap  determinism_regression__kid_ed25519.snap  determinism_regression__kid_hmac.snap  determinism_regression__kid_rsa.snap  determinism_regression__neg_bad_header.snap  determinism_regression__rsa2048_metadata.snap  determinism_regression__rsa4096_metadata.snap  determinism_regression__token_api_key_metadata.snap  determinism_regression__token_bearer_metadata.snap  determinism_regression__token_oauth_metadata.snap  determinism_regression__x509_chain_fingerprints.snap  determinism_regression__x509_self_signed_fingerprints.snap  determinism_regression__x509_self_signed_metadata.snap
tests/tests/: published_facade_smoke.rs
xtask/: Cargo.toml
xtask/src/: adoption_command_ledger.rs  adoption_regression.rs  audit_surface.rs  bundle_proof.rs  bundle_schema.rs  claim_proof.rs  claim_report.rs  closeout.rs  contract_packs.rs  doc_artifacts.rs  docs_sync.rs  doctor.rs  economics.rs  external_adoption_smoke.rs  goals.rs  main.rs  merge_queue.rs  plan.rs  policy.rs  pr_body.rs  pr_bundles.rs  proof_commands.rs  public_surface.rs  receipt.rs  repo_contract_report.rs  spec_check.rs  support_tiers.rs  target_output.rs  test_efficiency.rs  user_path_smoke.rs  verification_pack.rs
(+974 files in other folders)
