[package]
name = "uselesskey-integration-tests"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Integration and cross-crate tests for the uselesskey workspace."
categories.workspace = true
keywords = ["testing", "integration", "fixtures", "crypto", "deterministic"]

[dependencies]
# Core
uselesskey-core = { path = "../crates/uselesskey-core", version = "0.7.0" }
blake3.workspace = true

# Key types (all optional features)
uselesskey-rsa = { path = "../crates/uselesskey-rsa", version = "0.7.0", optional = true, features = ["jwk"] }
uselesskey-ecdsa = { path = "../crates/uselesskey-ecdsa", version = "0.7.0", optional = true, features = ["jwk"] }
uselesskey-ed25519 = { path = "../crates/uselesskey-ed25519", version = "0.7.0", optional = true, features = ["jwk"] }
uselesskey-hmac = { path = "../crates/uselesskey-hmac", version = "0.7.0", optional = true, features = ["jwk"] }
uselesskey-x509 = { path = "../crates/uselesskey-x509", version = "0.7.0", optional = true }
uselesskey-token = { path = "../crates/uselesskey-token", version = "0.7.0", optional = true }

# JWK/JWKS
uselesskey-jwk = { path = "../crates/uselesskey-jwk", version = "0.7.0", optional = true }

# Adapters
uselesskey-jsonwebtoken = { path = "../crates/uselesskey-jsonwebtoken", version = "0.7.0", optional = true, features = ["all"] }
uselesskey-rustls = { path = "../crates/uselesskey-rustls", version = "0.7.0", optional = true, features = ["server-config", "client-config"] }
uselesskey-ring = { path = "../crates/uselesskey-ring", version = "0.7.0", optional = true, features = ["all"] }
uselesskey-rustcrypto = { path = "../crates/uselesskey-rustcrypto", version = "0.7.0", optional = true, features = ["all"] }

# Facade crate (for determinism tests)
uselesskey = { path = "../crates/uselesskey", version = "0.7.0", optional = true, features = ["full"] }

# External dependencies
jsonwebtoken = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rsa = { workspace = true, optional = true, features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"], optional = true }
ed25519-dalek = { workspace = true, optional = true }
sha2 = { version = "0.11", features = ["oid"], optional = true }
base64 = { workspace = true, optional = true }
der-parser = { version = "10", optional = true }
x509-parser = { version = "0.18", optional = true }
insta = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
toml = "1.1"

[dev-dependencies]
trybuild.workspace = true
insta.workspace = true

[features]
# JWT integration tests
jwt = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-hmac",
    "dep:uselesskey-jwk",
    "dep:uselesskey-jsonwebtoken",
    "dep:jsonwebtoken",
]

# TLS integration tests
tls = [
    "dep:uselesskey-x509",
    "dep:uselesskey-rustls",
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:rustls",
]

# Cross-crypto backend tests
crypto-backend = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-ring",
    "ring",
]

# End-to-end workflow tests
e2e = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-hmac",
    "dep:uselesskey-x509",
    "dep:uselesskey-jwk",
    "dep:uselesskey-jsonwebtoken",
    "dep:uselesskey-rustls",
    "dep:jsonwebtoken",
    "dep:rustls",
]

# Key rotation workflow tests
key-rotation = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-hmac",
    "dep:uselesskey-x509",
    "dep:uselesskey-jwk",
    "dep:uselesskey-jsonwebtoken",
    "dep:uselesskey-rustls",
    "dep:jsonwebtoken",
    "dep:rustls",
]

# Cross-adapter compatibility tests
cross-adapter = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-ring",
    "dep:uselesskey-rustcrypto",
    "ring",
    "dep:rsa",
    "dep:p256",
    "dep:ed25519-dalek",
    "dep:sha2",
]

# Cross-crate determinism tests
determinism = ["dep:uselesskey"]

# Comprehensive determinism regression tests (snapshot-based)
determinism-regression = ["dep:uselesskey"]

# Concurrency and thread-safety tests
concurrency = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-hmac",
]

# Compile-fail (trybuild) tests
compile-fail = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
]

# Builder pattern and API ergonomics tests
builder-patterns = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-hmac",
    "dep:uselesskey-x509",
    "dep:uselesskey-jwk",
]

# KID stability and uniqueness tests
kid-stability = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-hmac",
    "dep:uselesskey-jwk",
]

# Error boundary and edge-case tests
error-boundaries = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
]

# API surface stability tests
api-surface = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-hmac",
    "dep:uselesskey-x509",
    "dep:uselesskey-token",
    "dep:uselesskey-jwk",
    "dep:insta",
]

# All integration tests
all = ["jwt", "tls", "crypto-backend", "e2e", "key-rotation", "cross-adapter", "determinism", "determinism-regression", "concurrency", "kid-stability", "compile-fail", "builder-patterns", "pem-der-format", "error-boundaries", "api-surface", "security-invariants"]

# PEM/DER format validation tests
pem-der-format = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-x509",
    "dep:base64",
    "dep:der-parser",
    "dep:x509-parser",
]

# Security invariant tests (no-key-leakage)
security-invariants = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-hmac",
    "dep:uselesskey-token",
    "dep:base64",
]

[[test]]
name = "jwt_integration"
path = "jwt_integration.rs"
required-features = ["jwt"]

[[test]]
name = "tls_integration"
path = "tls_integration.rs"
required-features = ["tls"]

[[test]]
name = "crypto_backend_integration"
path = "crypto_backend_integration.rs"
required-features = ["crypto-backend"]

[[test]]
name = "e2e_workflows"
path = "e2e_workflows.rs"
required-features = ["e2e"]

[[test]]
name = "key_rotation"
path = "key_rotation.rs"
required-features = ["key-rotation"]

[[test]]
name = "cross_adapter"
path = "cross_adapter.rs"
required-features = ["cross-adapter"]

[[test]]
name = "determinism"
path = "determinism.rs"
required-features = ["determinism"]

[[test]]
name = "governance"
path = "governance.rs"

[[test]]
name = "no_blob_policy"
path = "no_blob_policy.rs"

[[test]]
name = "concurrency"
path = "concurrency.rs"
required-features = ["concurrency"]

[[test]]
name = "kid_stability"
path = "kid_stability.rs"
required-features = ["kid-stability"]

[[test]]
name = "compile_tests"
path = "compile_tests.rs"
required-features = ["compile-fail"]

[[test]]
name = "builder_patterns"
path = "builder_patterns.rs"
required-features = ["builder-patterns"]

[[test]]
name = "pem_der_format"
path = "pem_der_format.rs"
required-features = ["pem-der-format"]

[[test]]
name = "cross_crate_determinism"
path = "cross_crate_determinism.rs"
required-features = ["determinism"]

[[test]]
name = "published_facade_smoke"
path = "tests/published_facade_smoke.rs"
required-features = ["determinism"]

[[test]]
name = "msrv_check"
path = "msrv_check.rs"

[[test]]
name = "determinism_regression"
path = "determinism_regression.rs"
required-features = ["determinism-regression"]

[[test]]
name = "error_boundaries"
path = "error_boundaries.rs"
required-features = ["error-boundaries"]

[[test]]
name = "api_surface"
path = "api_surface.rs"
required-features = ["api-surface"]

[[test]]
name = "security_invariants"
path = "security_invariants.rs"
required-features = ["security-invariants"]

[lints]
workspace = true
