[package]
name = "uselesskey-aws-lc-rs"
version = "0.7.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "aws-lc-rs adapter traits for uselesskey RSA/ECDSA/Ed25519 fixtures."
categories.workspace = true
keywords = ["aws-lc-rs", "signing", "fixtures", "testing", "adapter"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-aws-lc-rs"
authors.workspace = true

[dependencies]
aws-lc-rs = { version = "1", optional = true }

# Key type crates (all optional)
uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.7.0", optional = true }
uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.7.0", optional = true }
uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.7.0", optional = true }

[package.metadata.docs.rs]
features = ["all"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Note: The "native" feature is not enabled by default because aws-lc-rs requires NASM on Windows.
# To use aws-lc-rs integration, enable the "native" feature explicitly.
# CI environments should install NASM before running tests with this feature.
default = []
native = ["dep:aws-lc-rs"]
rsa = ["dep:uselesskey-rsa"]
ecdsa = ["dep:uselesskey-ecdsa"]
ed25519 = ["dep:uselesskey-ed25519"]
all = ["native", "rsa", "ecdsa", "ed25519"]

[dev-dependencies]
uselesskey-core = { path = "../uselesskey-core", version = "0.7.0" }
uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.7.0" }
uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.7.0" }
uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.7.0" }
aws-lc-rs = "1"
hex = "0.4"
serde.workspace = true
insta.workspace = true
proptest.workspace = true


[lints]
workspace = true
