[package]
name = "uselesskey-bdd-steps"
version = "0.9.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false
description = "Cucumber BDD step definitions for uselesskey fixture crates."
categories.workspace = true
keywords = ["testing", "bdd", "cucumber", "fixtures", "crypto"]

[dependencies]
cucumber.workspace = true
uselesskey = { path = "../uselesskey", default-features = false, features = [] }
uselesskey-core = { path = "../uselesskey-core" }
uselesskey-jwk = { path = "../uselesskey-jwk", optional = true }
uselesskey-token = { path = "../uselesskey-token", optional = true }
uselesskey-jsonwebtoken = { path = "../uselesskey-jsonwebtoken", default-features = false, features = ["all"] }

rsa = { workspace = true, features = ["sha2"] }
jsonwebtoken.workspace = true
ed25519-dalek.workspace = true
p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8", "pem"] }
p384 = { version = "0.13.1", features = ["ecdsa", "pkcs8", "pem"] }
x509-parser = "0.18.1"
serde_json.workspace = true
base64.workspace = true
pgp = { version = "0.19.0", default-features = false }
uselesskey-aws-lc-rs = { path = "../uselesskey-aws-lc-rs", version = "0.9.1", optional = true, default-features = false, features = ["all"] }
uselesskey-ring = { path = "../uselesskey-ring", version = "0.9.1", optional = true, default-features = false, features = ["all"] }
uselesskey-rustcrypto = { path = "../uselesskey-rustcrypto", version = "0.9.1", optional = true, default-features = false, features = ["all"] }
uselesskey-rustls = { path = "../uselesskey-rustls", version = "0.9.1", optional = true, default-features = false, features = ["x509", "tls-config", "rustls-ring"] }
uselesskey-tonic = { path = "../uselesskey-tonic", version = "0.9.1", optional = true, default-features = false, features = ["x509"] }
hmac = { version = "0.13.0-rc.6", optional = true }
aws-lc-rs = { version = "1", optional = true }
ring = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pki-types = { version = "1", optional = true }

[features]
default = ["uk-default"]
uk-default = ["uselesskey/default"]
uk-bdd-keys = ["uk-rsa", "uk-ecdsa", "uk-ed25519", "uk-hmac", "uk-ssh", "uk-x509", "uk-jwk"]
uk-all = ["uselesskey/full", "uk-bdd-keys", "uk-pgp", "uk-token", "uk-jwt", "uk-core-id", "uk-core-seed", "uk-core-factory", "uk-core-kid", "uk-core-keypair", "uk-core-negative", "uk-core-sink", "uk-core-token-shape", "uk-aws-lc-rs", "uk-rustls", "uk-tonic", "uk-ring", "uk-rustcrypto"]
uk-core-id = []
uk-core-token-shape = ["dep:uselesskey-token"]
uk-core-seed = []
uk-core-factory = []
uk-core-kid = ["dep:uselesskey-jwk"]
uk-core-keypair = []
uk-core-negative = []
uk-core-sink = []
uk-jwt = ["uk-bdd-keys"]
uk-rsa = ["uselesskey/rsa"]
uk-ecdsa = ["uselesskey/ecdsa"]
uk-ed25519 = ["uselesskey/ed25519"]
uk-hmac = ["uselesskey/hmac"]
uk-ssh = ["uselesskey/ssh"]
uk-pgp = ["uselesskey/pgp"]
uk-x509 = ["uselesskey/x509"]
uk-jwk = ["uselesskey/jwk"]
uk-token = ["uselesskey/token"]
uk-aws-lc-rs = ["dep:uselesskey-aws-lc-rs", "dep:aws-lc-rs", "uk-bdd-keys"]
uk-rustls = ["dep:uselesskey-rustls", "dep:rustls", "dep:rustls-pki-types", "uk-bdd-keys"]
uk-tonic = ["dep:uselesskey-tonic"]
uk-ring = ["dep:uselesskey-ring", "dep:ring", "uk-bdd-keys"]
uk-rustcrypto = ["dep:uselesskey-rustcrypto", "dep:hmac", "uk-bdd-keys"]

[lints]
workspace = true
